--- a/Views/Contato/Index.cshtml
+++ b/Views/Contato/Index.cshtml
@@ -2,6 +2,17 @@
 @{
     ViewData["Title"] = "Listagem de Contatos";
 }
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+ <script>
+
+    function abrirPopup() {
+        
+         $('#popUpApagar').modal('show');
+    }
+
+ </script>
+
+
 <div class="text-center">
     <h1 class="display-4"  >Listagem de Contatos</h1>
     
@@ -29,14 +40,15 @@
                 <td>
                     <div class="btn-group" role="group" >
                         <a role="button" class="btn btn-primary" asp-controller="Contato" asp-action="Editar">Editar</a>
-                        <a role="button" class="btn btn-danger">Apagar</a>
+                        <button role="button" class="btn btn-danger" onclick="javascript:abrirPopup();">Apagar</button>
+                        <div id="hiddenApagar"></div>
                     </div>
                 </td>
             </tr>
            @*  <tr>
                 <th scope="row">2</th>
                 <td>Jacob</td>
-                <td>Jacob@gmail.com</td>
+                <td>Jacob@gmail.com</td>    
                 <td>11 92202-0090</td>
                 <td>
                     <div class="btn-group" role="group"  >
@@ -60,3 +72,5 @@
         </tbody>
     </table>
 </div>
+
+@Html.Partial("_popUpApagar")
