--- a/Views/Contato/Editar.cshtml
+++ b/Views/Contato/Editar.cshtml
@@ -1,5 +1,11 @@
-﻿<div class="text-center">
+﻿@model ContatoModel
+@{
+    ViewData["Action"] = "Editar";
+    ViewData["Controller"] = "Contato";
+}
+
+<div class="text-center">
     <h1 class="display-4">Editar Contato</h1>
 </div>
 
-@Html.Partial("Forms")
+@Html.Partial("Forms", Model)
