--- a/Views/Contato/Forms.cshtml
+++ b/Views/Contato/Forms.cshtml
@@ -1,18 +1,20 @@
-﻿<form>
+﻿@model ContatoModel
+
+<form asp-controller="@ViewData["Controller"]" asp-action="@ViewData["Action"]" method="post">
     <div class="form-group">
         <label for="nome">Nome</label>
-        <input type="text" class="form-control" placeholder="Digite o nome do contato" pattern="[A-Z\s]">
+        <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do contato" pattern="[A-Z\s]">
     </div>
 
     <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" class="form-control" placeholder="Digite o e-mail do contato">
+        <input type="email" asp-for="Email" class="form-control" placeholder="Digite o e-mail do contato">
     </div>
 
 
     <div class="form-group">
         <label for="celular">Celular</label>
-        <input type="text" class="form-control" placeholder="Digite o celular do contato" pattern="[0-9]{5}-[0-9]{3}">
+        <input type="text" asp-for="Celular" class="form-control" placeholder="Digite o celular do contato" pattern="[0-9]{5}-[0-9]{3}">
     </div>
     <br />
     <div class="form-group">
