--- a/Views/Contato/Forms.cshtml
+++ b/Views/Contato/Forms.cshtml
@@ -3,18 +3,22 @@
 <form asp-controller="@ViewData["Controller"]" asp-action="@ViewData["Action"]" method="post">
     <div class="form-group">
         <label for="nome">Nome</label>
-        <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do contato" pattern="[A-Z\s]">
+        <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do contato"  >
+        @Html.ValidationMessageFor(x => x.Nome)
     </div>
 
     <div class="form-group">
         <label for="email">Email</label>
         <input type="email" asp-for="Email" class="form-control" placeholder="Digite o e-mail do contato">
+        @Html.ValidationMessageFor(x => x.Email)
     </div>
+    <input type="hidden" name="id" asp-for="Id" />
 
 
     <div class="form-group">
         <label for="celular">Celular</label>
-        <input type="text" asp-for="Celular" class="form-control" placeholder="Digite o celular do contato" pattern="[0-9]{5}-[0-9]{3}">
+        <input type="text" asp-for="Celular" class="form-control" placeholder="Digite o celular do contato" >
+        @Html.ValidationMessageFor(x => x.Celular)
     </div>
     <br />
     <div class="form-group">
