--- a/Views/Contato/_popUpApagar.cshtml
+++ b/Views/Contato/_popUpApagar.cshtml
@@ -1,22 +1,24 @@
-﻿<div class="modal fade" id="popUpApagar" tabindex="-1"  >
+﻿<!-- Modal -->
+<div class="modal fade" id="popUpApagar" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content p-3">
-            <div class="modal-header">
-                <h5 class="modal-title">Apagar Contato</h5>
-                <button id="btn_close" type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
+            <form asp-controller="Contato" asp-action="Apagar" method="post">
+                <input type="hidden" name="id" id="idParaExcluir" />
 
-            <div class="modal-body">
-                <div class="row mb-2">
-                    <div>
-                        <h3>Deseja realmente apagar este Contato?</h3>
-                    </div>
-                    <div>
-                        <button type="button" class="btn btn-primary" asp-controller="Contato" asp-action="Apagar">Sim</button>
-                        <button data-bs-dismiss="modal" type="button" class="btn btn-danger">Cancelar</button>
-                    </div>
+                <div class="modal-header">
+                    <h5 class="modal-title">Apagar Contato</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
-            </div>
+
+                <div class="modal-body">
+                    <h3 id="input_texto_contato"></h3>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">Sim</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
