--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,6 +4,9 @@
 }
 
 <div class="text-center">
+    <h1 class="display-4">Bem Vindo!</h1>
+    <hr />
     <h1 class="display-4">Contatos - HOME</h1>
+    <hr />
  </div>
     
