Alterações no sistema e inclusão para redefinir senha e enviar por e-mail

--- a/Views/Usuario/Criar.cshtml
+++ b/Views/Usuario/Criar.cshtml
@@ -1,4 +1,4 @@
-﻿@model ContatoModel
+﻿@model UsuarioModel
 
 @{
     ViewData["Action"] = "Criar";
@@ -6,7 +6,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Cadastrar Contato</h1>
+    <h1 class="display-4">Cadastrar Usuario</h1>
 </div>
 
 @Html.Partial("Forms", Model)
