--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -16,6 +16,11 @@
         <input type="password" asp-for="Senha" class="form-control" id="senha">
         @Html.ValidationMessageFor(x => x.Senha)
     </div>
+
+    <p class="mb-4 text-sm mx-auto">
+        Esqueceu a senha?
+        <a asp-action="RedefinirSenha" asp-controller="Login">Redefinir senha</a>
+    </p>
     
     <button type="submit" class="btn btn-primary btn-block">Entrar</button>
 </form>
