--- a/Views/Usuario/Forms.cshtml
+++ b/Views/Usuario/Forms.cshtml
@@ -36,14 +36,13 @@
         @Html.ValidationMessageFor(x => x.Perfil)
     </div>
 
-    @if(!Model.IsEdit)
-    {
-    <div class="form-group">
+ 
+    <div class="form-group" style="@( (Model is not null && !Model.IsEdit) || Model is null ? "display: block;" : "display: none;" )">
         <label for="senha">Senha</label>
         <input type="password" asp-for="Senha" class="form-control" placeholder="Digite a senha do usuario">
         @Html.ValidationMessageFor(x => x.Senha)
     </div>
-    }
+ 
 
     <br />
     <div class="form-group">
