--- a/Views/Contato/Forms.cshtml
+++ b/Views/Contato/Forms.cshtml
@@ -12,8 +12,10 @@
         <input type="email" asp-for="Email" class="form-control" placeholder="Digite o e-mail do contato">
         @Html.ValidationMessageFor(x => x.Email)
     </div>
-    <input type="hidden" name="id" asp-for="Id" />
-
+    @if (Model is not null && Model.Id > 0) 
+    {
+        <input type="hidden" name="id" asp-for="Id" />
+    }
 
     <div class="form-group">
         <label for="celular">Celular</label>
