--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -6,6 +6,8 @@
  
 
 <form asp-action="Entrar" asp-controller="Login" method="post">
+    @await Component.InvokeAsync("Message")
+
     <div class="mb-3">
         <label for="login" class="form-label">Login</label>
         <input type="text" asp-for="Login" class="form-control" id="login" >
