Conclusão tela home

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bem Vindo!</h1>
+    <h1 class="display-4">Bem Vindo!!</h1>
     <hr />
     <h1 class="display-4">Contatos - HOME</h1>
     <hr />
